#90 - Fix wrong color of header logo

--- a/src/hanusovedni/static/sass/_partners.scss
+++ b/src/hanusovedni/static/sass/_partners.scss
@@ -26,7 +26,9 @@
     }
   }
 
-  .logo {
-    filter: grayscale(1);
+  main {
+    .logo {
+      filter: grayscale(1);
+    }
   }
 }
